--- a/HappyDana.json
+++ b/HappyDana.json
@@ -1,1 +1,1 @@
-{"HappyDana": "protectpinjamkredit.com","HappyDana":"147.139.202.127"}
+{"HappyDana_url": "protectpinjamkredit.com","HappyDana_ip":"147.139.202.127"}
